# patterns-for-low-latency-applications

./: README.md
design_patterns/branch_reduction/: mybenchmark.cc  results.md
design_patterns/cache_warming/: CMakeLists.txt  docker-compose.yaml  mybenchmark.cc  results.md
design_patterns/compile-time_dispatch/: mybenchmark.cc  results.md
design_patterns/constexpr/: mybenchmark.cc  results.md
design_patterns/inlining/: mybenchmark.cc  results.md
design_patterns/lock-free/: mybenchmark.cc  results.md
design_patterns/lock-free/buiild/: mybenchmark
design_patterns/loop_unrolling/: mybenchmark.cc  results.md
design_patterns/mixing_data_types/: mybenchmark.cc  results.md
design_patterns/prefetching/: mybenchmark.cc  results.md
design_patterns/short-circuit/: mybenchmark.cc  results.md
design_patterns/signed_and_unsigned/: mybenchmark.cc  results.md
design_patterns/simd/: results.md
design_patterns/slowpath_remove/: mybenchmark.cc  results.md
